# pcmanfm

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  autogen.sh  configure  configure.in
data/: Makefile.am  Makefile.in  mount.rules  pcmanfm-find.desktop.in  pcmanfm-folder-handler.desktop  pcmanfm-folder-handler.desktop.in  pcmanfm.desktop.in
data/ui/: about-dlg.ui  appchooserdlg.ui  file-assoc-dlg.ui  file_properties.ui  find-files.ui  prefdlg.ui
po/: ChangeLog  LINGUAS  POTFILES.in  af.po  ar.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  lt.po  ml.po  ms.po  nb.po  nl.po  nn.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sk.po  sl.po  (+8 more)
src/: Makefile.am  Makefile.in  edit-bookmarks.c  file-assoc-dlg.c  file-assoc-dlg.h  find-files.c  go-dialog.c  main-window.c  main-window.h  main.c  pref-dialog.c  settings.c  settings.h  xml-purge.c
src/desktop/: desktop-window.c  desktop-window.h  desktop.c
src/exo/: exo-icon-view.c
src/mime-type/: mime-cache.c  mime-type.c  mime-type.h
src/ptk/: ptk-app-chooser.c  ptk-bookmarks.c  ptk-bookmarks.h  ptk-clipboard.c  ptk-clipboard.h  ptk-console-output.c  ptk-console-output.h  ptk-dir-tree-view.c  ptk-dir-tree.c  ptk-dir-tree.h  ptk-file-archiver.c  ptk-file-archiver.h  ptk-file-browser.c  ptk-file-browser.h  ptk-file-list.c  ptk-file-menu.c  ptk-file-menu.h  ptk-file-misc.c  ptk-file-misc.h  ptk-file-properties.c  ptk-file-properties.h  ptk-file-task.c  ptk-file-task.h  ptk-input-dialog.h  (+6 more)
(+16 files in other folders)
